Java/JAX-WS/Example/Node.js/node client.txt
[rajani@localhost Node.js]$ node client.js
module.js:327
    throw err;
    ^

Error: Cannot find module 'soap'
    at Function.Module._resolveFilename (module.js:325:15)
    at Function.Module._load (module.js:276:25)
    at Module.require (module.js:353:17)
    at require (internal/module.js:12:17)
    at Object.<anonymous> (/home/rajani/R/Working/Java/JAX-WS/Example/Node.js/client.js:3:12)
    at Module._compile (module.js:409:26)
    at Object.Module._extensions..js (module.js:416:10)
    at Module.load (module.js:343:32)
    at Function.Module._load (module.js:300:12)
    at Function.Module.runMain (module.js:441:10)
[rajani@localhost Node.js]$ npm i soap
 
> ursa@0.9.3 install /home/rajani/R/Working/Java/JAX-WS/Example/Node.js/node_modules/soap/node_modules/ursa
> node-gyp rebuild

make: Entering directory `/home/rajani/R/Working/Java/JAX-WS/Example/Node.js/node_modules/soap/node_modules/ursa/build'
  CXX(target) Release/obj.target/ursaNative/src/ursaNative.o
  SOLINK_MODULE(target) Release/obj.target/ursaNative.node
  COPY Release/ursaNative.node
make: Leaving directory `/home/rajani/R/Working/Java/JAX-WS/Example/Node.js/node_modules/soap/node_modules/ursa/build'
soap@0.14.0 node_modules/soap
├── debug@0.7.4
├── sax@1.2.1
├── selectn@0.9.6
├── node-uuid@1.4.7
├── strip-bom@0.3.1 (first-chunk-stream@0.1.0, is-utf8@0.2.1)
├── xml-crypto@0.8.4 (xpath.js@1.0.6, xmldom@0.1.19)
├── ejs@2.3.4
├── lodash@3.10.1
├── request@2.72.0 (aws-sign2@0.6.0, forever-agent@0.6.1, tunnel-agent@0.4.2, oauth-sign@0.8.1, is-typedarray@1.0.0, caseless@0.11.0, stringstream@0.0.5, isstream@0.1.2, json-stringify-safe@5.0.1, extend@3.0.0, tough-cookie@2.2.2, qs@6.1.0, combined-stream@1.0.5, mime-types@2.1.10, form-data@1.0.0-rc4, aws4@1.3.2, hawk@3.1.3, bl@1.1.2, http-signature@1.1.1, har-validator@2.0.6)
└── ursa@0.9.3 (bindings@1.2.1, nan@2.3.2)
[rajani@localhost Node.js]$ node client.js
{ return: 'Hello World JAX-WS Node.js Web Service Client' }
[rajani@localhost Node.js]$ 

